fixed footer invisible problem

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -100,9 +100,13 @@ main {
 
 	.video-container {
 		position: absolute;
-		height: 100%;
+		height: 90vh;
 		width: 100%;
 		overflow: hidden;
+
+		@include tablet {
+			height: 100%;
+		}
 
 		video, iframe {
 			min-width: 100%;
